--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,2 @@
-<h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
-<p>Address:</p>
-<p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
-</p>
+<h1>Contact Mateo</h1>
+<p>Email: mrcark2020@gmail.com</p>
